--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-notification-alert": "0.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
-    "reactstrap": "5.0.0-alpha.4"
+    "reactstrap": "5.0.0-alpha.4",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
