--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^1.2.1",
     "react-spinners": "^0.3.2",
     "reactstrap": "5.0.0-alpha.4",
+    "styled-components": "^3.3.0",
     "web3": "^1.0.0-beta.34"
   },
   "scripts": {
