--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nud-react",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://timcreative.github.io/now-ui-dashboard-react",
+  "homepage": "https://sendtoken.app",
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "chart.js": "2.7.1",
