package json changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.sendtoken.app",
+  "homepage": "http://lucaspelloni2.github.io/crypto-portfolio",
   "name": "nud-react",
   "version": "1.0.0",
   "private": true,
